<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView style="@style/top_logo"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:orientation="vertical"
            >
            <EditText
                android:id="@+id/edtEmail"
                style="@style/form_input"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edtPassword"
                style="@style/form_input"
                android:layout_marginTop="16dp"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edtPassword2"
                style="@style/form_input"
                android:layout_marginTop="16dp"
                android:hint="@string/prompt_confirm_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/chkAgreeTOS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checked="true"
                android:text="I agree to the Terms of Service and Privacy Policy"
                />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnRegister"
                style="@style/form_button"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_blue_sel"
                android:text="@string/action_sign_up"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:textAllCaps="false"
                />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="16dp"
                android:textAllCaps="false"
                android:text="I already have an account!"
                android:textSize="18sp"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
