<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.training.onit.LoginActivity">

    <ImageView style="@style/top_logo"/>

    <TextView
        style="@style/page_title"
        android:text="WELCOME TO ON IT"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/edtEmail"
            style="@style/form_input"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edtPassword"
            style="@style/form_input"
            android:layout_marginTop="16dp"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="@style/form_button"
            android:background="@drawable/btn_blue_sel"
            android:text="@string/action_sign_in"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            />

        <LinearLayout
            android:id="@+id/btnLoginWithGoogle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_control_height"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:background="@drawable/grey_overlay"
            >
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginLeft="24dp"
                android:src="@drawable/logo_google"
                android:scaleType="fitXY"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Sign up with Google"
                android:textSize="18sp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btnLoginWithFacebook"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_control_height"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:background="@drawable/grey_overlay"
            >
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginLeft="24dp"
                android:src="@drawable/logo_facebook"
                android:scaleType="fitXY"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Sign up with Facebook"
                android:textSize="18sp"
                />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/split_or"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            style="@style/form_button"
            android:background="@drawable/btn_blue_sel"
            android:text="@string/action_sign_up"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            />

    </LinearLayout>

</LinearLayout>
